Sat Nov  5 18:17:08 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc-5.0.0
	  Release note: https://github.com/rdoc/rdoc/blob/b825775647f62c5b525e9780a28ff2fbb1d5bf6f/History.rdoc#500--2016-11-05

Sat Nov  5 17:29:06 2016  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS#extract_resources): Use each_resource
	  instead of each_answer.
	  [ruby-core:75461] [Bug#12372] reported by Rafael Fernandez Lopez.

Sat Nov  5 17:18:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/-test/file/fs.c (get_atime_p): Updating of file access times
	  is enabled or not.

Sat Nov  5 16:28:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (extract_getline_opts): extract chomp option.
	  [Feature #12553]

Sat Nov  5 15:58:24 2016  Sho Hashimoto  <sho-h@netlab.jp>

	* tool/mkconfig.rb: [DOC] add rbconfig documentation.

Sat Nov  5 15:42:52 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/smtp.rb (tlsconnect): support timeout for TLS handshake.
	  [ruby-core:76893] [Bug #12678]

	* lib/net/protocol.rb (ssl_socket_connect): new method to implement
	  timeout for TLS handshake.

	* lib/net/http.rb (connect): use Net::Protocol#ssl_socket_connect.

Sat Nov  5 14:17:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (brace_body, do_body): since cmdarg_stack is saved in
	  VALUE val, should restore from the same member.  on big-endian
	  platforms where VALUE is larger than int, it restored 0 in the
	  upper word.  [ruby-core:77920] [Bug #12900]

Sat Nov  5 13:52:52 2016  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb (Shellwords#shellsplit): Fix the handling of
	  the backslash in double quotes to conform to the standard.
	  [ruby-core:63807] [Bug #10055]

Sat Nov  5 12:14:31 2016  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (Pathname#empty?): New method.
	  [ruby-core:76404] [Feature#12596] Proposed by John Backus.

Sat Nov  5 11:53:02 2016  Shugo Maeda  <shugo@ruby-lang.org>
